--- a/app/src/main/res/layout-land/activity_color_picker.xml
+++ b/app/src/main/res/layout-land/activity_color_picker.xml
@@ -23,50 +23,61 @@
     <FrameLayout
         android:id="@+id/frame_layout"
         android:layout_width="0dp"
-        android:layout_height="200dp"
+        android:layout_height="0dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toRightOf="@id/viewPager"
-        app:layout_constraintTop_toBottomOf="@+id/toolbar"/>
+        app:layout_constraintTop_toBottomOf="@+id/toolbar"
+        app:layout_constraintBottom_toTopOf="@id/button_frame"
+        app:layout_constraintVertical_chainStyle="spread"/>
 
 
     <EditText
         android:id="@+id/color_picker_color_name_edit_text"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:hint="Color Name"
         android:maxLines="1"
         android:layout_margin="@dimen/standard_margin"
         android:textColor="@color/colorAccent"
         android:textColorHint="@color/colorAccentDark"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintRight_toLeftOf="@id/color_picker_confirm_button"
+        app:layout_constraintRight_toLeftOf="@id/button_frame"
         app:layout_constraintTop_toBottomOf="@id/viewPager"
         app:layout_constraintBottom_toBottomOf="parent"/>
 
     <FrameLayout
         android:id="@+id/viewPager"
         android:layout_width="0dp"
-        android:layout_height="200dp"
+        android:layout_height="0dp"
         app:layout_constraintRight_toLeftOf="@id/frame_layout"
         app:layout_constraintTop_toBottomOf="@+id/toolbar"
+        app:layout_constraintBottom_toTopOf="@id/color_picker_color_name_edit_text"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintHorizontal_chainStyle="spread">
+        app:layout_constraintHorizontal_chainStyle="spread"
+        app:layout_constraintVertical_chainStyle="spread">
 
     </FrameLayout>
 
-    <Button
-        android:id="@+id/color_picker_confirm_button"
+    <FrameLayout
+        android:id="@+id/button_frame"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Add to favourites"
-        android:onClick="addColor"
-        android:textAllCaps="false"
+        android:layout_height="0dp"
         app:layout_constraintTop_toBottomOf="@id/frame_layout"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toRightOf="@id/color_picker_color_name_edit_text"
-        app:layout_constraintRight_toRightOf="parent" />
+        app:layout_constraintRight_toRightOf="parent">
+        <Button
+            android:id="@+id/color_picker_confirm_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Add to favourites"
+            android:onClick="addColor"
+            android:layout_gravity="center"
+            android:textAllCaps="false"/>
+    </FrameLayout>
+
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
