--- a/app/src/main/res/layout/fragment_favourite_colors.xml
+++ b/app/src/main/res/layout/fragment_favourite_colors.xml
@@ -1,9 +1,17 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/cardsColor"
+    android:orientation="vertical"
     tools:context="com.example.josegeorges.paintit.FavouriteColorsFragment">
+
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:background="@color/colorPrimary" />
+
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/favourite_colors_recyclerView"
@@ -12,4 +20,4 @@
 
     </android.support.v7.widget.RecyclerView>
 
-</FrameLayout>
+</LinearLayout>
