--- a/app/src/main/res/layout/fragment_rgb2.xml
+++ b/app/src/main/res/layout/fragment_rgb2.xml
@@ -17,8 +17,8 @@
             android:id="@+id/red_value"
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_margin="@dimen/standard_margin"
-            android:padding="10dp"
+            android:layout_margin="@dimen/standard_padding"
+            android:padding="@dimen/standard_padding"
             app:layout_constraintEnd_toStartOf="@+id/red_editText"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -27,7 +27,7 @@
             android:id="@+id/red_editText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/standard_margin"
+            android:layout_marginTop="@dimen/standard_padding"
             android:layout_marginEnd="@dimen/standard_margin"
             android:layout_marginRight="@dimen/standard_margin"
             app:layout_constraintEnd_toEndOf="parent"
@@ -45,8 +45,8 @@
             android:id="@+id/green_value"
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_margin="@dimen/standard_margin"
-            android:padding="10dp"
+            android:layout_margin="@dimen/standard_padding"
+            android:padding="@dimen/standard_padding"
             app:layout_constraintEnd_toStartOf="@+id/green_editText"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -55,7 +55,7 @@
             android:id="@+id/green_editText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/standard_margin"
+            android:layout_marginTop="@dimen/standard_padding"
             android:layout_marginEnd="@dimen/standard_margin"
             android:layout_marginRight="@dimen/standard_margin"
             app:layout_constraintEnd_toEndOf="parent"
@@ -72,8 +72,8 @@
             android:id="@+id/blue_value"
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_margin="@dimen/standard_margin"
-            android:padding="10dp"
+            android:layout_margin="@dimen/standard_padding"
+            android:padding="@dimen/standard_padding"
             app:layout_constraintEnd_toStartOf="@+id/blue_editText"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -82,7 +82,7 @@
             android:id="@+id/blue_editText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/standard_margin"
+            android:layout_marginTop="@dimen/standard_padding"
             android:layout_marginEnd="@dimen/standard_margin"
             android:layout_marginRight="@dimen/standard_margin"
             app:layout_constraintEnd_toEndOf="parent"
