--- a/app/src/main/res/layout/fragment_settings_screen.xml
+++ b/app/src/main/res/layout/fragment_settings_screen.xml
@@ -5,6 +5,12 @@
     android:orientation="vertical"
     android:background="@color/colorBackground">
 
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:background="@color/colorPrimary" />
+
     <ListView
         android:id="@android:id/list"
         android:layout_width="match_parent"
