--- a/app/src/main/res/layout/exterior_paint_item.xml
+++ b/app/src/main/res/layout/exterior_paint_item.xml
@@ -17,7 +17,7 @@
         android:padding="16dp">
 
         <ImageView
-            android:id="@+id/interiorPaint_imageView"
+            android:id="@+id/exteriorPaint_imageView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginRight="16dp"
@@ -25,13 +25,13 @@
             app:layout_constraintLeft_toLeftOf="parent" />
 
         <TextView
-            android:id="@+id/interiorPaint_name"
+            android:id="@+id/exteriorPaint_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Paint Name"
             android:textSize="25sp"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintLeft_toRightOf="@+id/interiorPaint_imageView"
+            app:layout_constraintLeft_toRightOf="@+id/exteriorPaint_imageView"
             android:layout_marginLeft="16dp" />
 
     </android.support.constraint.ConstraintLayout>
