--- a/app/src/main/res/menu/toolbar_icons.xml
+++ b/app/src/main/res/menu/toolbar_icons.xml
@@ -2,7 +2,16 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <!-- Settings, should always be in the overflow -->
+
     <item android:id="@+id/action_settings"
-        android:icon="@drawable/ic_more_vert_black_24dp"
-        app:showAsAction="always"/>
+        android:title="Settings"
+        app:showAsAction="collapseActionView"/>
+
+    <item android:id="@+id/action_about"
+        android:title="About us"
+        app:showAsAction="collapseActionView"/>
+
+    <item android:id="@+id/action_log_out"
+        android:title="Log out"
+        app:showAsAction="collapseActionView"/>
 </menu>
