--- a/app/src/main/res/layout/fragment_shopping_cart.xml
+++ b/app/src/main/res/layout/fragment_shopping_cart.xml
@@ -1,58 +1,62 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<android.support.constraint.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:padding="16dp"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:id="@+id/relativeLayout">
 
     <ImageView
         android:id="@+id/cart_image"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
         app:srcCompat="@drawable/ic_camera_enhance_black_24dp"
-        android:layout_marginRight="16dp" />
+        android:layout_marginRight="16dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent" />
 
 
     <TextView
         android:id="@+id/cart_item"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_toRightOf="@+id/cart_image"
         android:text="Acrylic Flat Paint"
-        android:textSize="25sp" />
+        android:textSize="25sp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintLeft_toRightOf="@+id/cart_image"
+        android:layout_marginLeft="16dp" />
 
     <TextView
         android:id="@+id/cart_item_description"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/cart_item"
-        android:layout_toRightOf="@+id/cart_image"
         android:textSize="11dp"
         android:paddingBottom="3dp"
-        android:text="Acrylic Flat Paint Yellow (5Gallon)" />
+        android:text="Acrylic Flat Paint Yellow (5Gallon)"
+        app:layout_constraintLeft_toRightOf="@+id/cart_image"
+        android:layout_marginLeft="16dp"
+        app:layout_constraintTop_toBottomOf="@+id/cart_item" />
 
     <TextView
         android:id="@+id/cart_item_price"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/cart_item_description"
-        android:layout_toRightOf="@+id/cart_image"
-        android:text="$ 19.99" />
+        android:text="$ 19.99"
+        app:layout_constraintLeft_toRightOf="@+id/cart_image"
+        android:layout_marginLeft="16dp"
+        app:layout_constraintTop_toBottomOf="@+id/cart_item_description" />
 
     <ImageView
         android:id="@+id/remove_from_cart"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_marginLeft="172dp"
+        android:layout_marginLeft="16dp"
         android:layout_marginStart="172dp"
-        android:layout_toEndOf="@+id/cart_image"
-        android:layout_toRightOf="@+id/cart_image"
-        app:srcCompat="@drawable/ic_delete_black_24dp" />
+        app:srcCompat="@drawable/ic_delete_black_24dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintLeft_toRightOf="@+id/cart_image"
+        app:layout_constraintStart_toEndOf="@+id/cart_image" />
 
 
-</RelativeLayout>
+</android.support.constraint.ConstraintLayout>
