--- a/app/src/main/res/layout/fragment_item_details.xml
+++ b/app/src/main/res/layout/fragment_item_details.xml
@@ -35,7 +35,15 @@
         app:layout_constraintTop_toBottomOf="@id/item_title"
         app:layout_constraintBottom_toTopOf="@id/properties_container"/>
 
-
+    <TextView
+        android:id="@+id/item_price"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Price"
+        app:layout_constraintTop_toBottomOf="@id/item_image"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginTop="@dimen/standard_margin"
+        app:layout_constraintLeft_toLeftOf="parent"/>
 
 
     <LinearLayout
