--- a/app/src/main/res/layout/fragment_shopping_cart.xml
+++ b/app/src/main/res/layout/fragment_shopping_cart.xml
@@ -12,14 +12,14 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:srcCompat="@drawable/ic_camera_enhance_black_24dp"
-        android:layout_marginRight="16dp"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"/>
 
 
     <TextView
         android:id="@+id/cart_item"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Acrylic Flat Paint"
         android:textSize="25sp"
@@ -29,7 +29,7 @@
 
     <TextView
         android:id="@+id/cart_item_description"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="11dp"
         android:paddingBottom="3dp"
@@ -40,7 +40,7 @@
 
     <TextView
         android:id="@+id/cart_item_price"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="$ 19.99"
         app:layout_constraintLeft_toRightOf="@+id/cart_image"
@@ -49,14 +49,11 @@
 
     <ImageView
         android:id="@+id/remove_from_cart"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="16dp"
-        android:layout_marginStart="172dp"
         app:srcCompat="@drawable/ic_delete_black_24dp"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintLeft_toRightOf="@+id/cart_image"
-        app:layout_constraintStart_toEndOf="@+id/cart_image" />
+        app:layout_constraintRight_toRightOf="parent" />
 
 
 </android.support.constraint.ConstraintLayout>
