--- a/app/src/main/res/layout/fragment_item_details.xml
+++ b/app/src/main/res/layout/fragment_item_details.xml
@@ -4,6 +4,7 @@
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
     android:background="@color/colorBackground"
+    android:clickable="true"
     tools:context="com.example.josegeorges.paintit.ItemDetailsFragment"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
