--- a/app/src/main/res/layout/fragment_item_details.xml
+++ b/app/src/main/res/layout/fragment_item_details.xml
@@ -28,6 +28,22 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@id/toolbar"/>
 
+
+
+
+    <TextView
+        android:textSize="@dimen/title_size"
+        android:textAlignment="center"
+        android:id="@+id/item_individual_price"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="#00ff00"
+        android:text="Price"
+        android:layout_margin="@dimen/standard_margin"
+        app:layout_constraintLeft_toRightOf="@id/item_title"
+        app:layout_constraintTop_toBottomOf="@id/toolbar"/>
+
+
     <ImageView
         android:layout_margin="@dimen/standard_margin"
         android:id="@+id/item_image"
