--- a/app/src/main/res/menu/toolbar_icons.xml
+++ b/app/src/main/res/menu/toolbar_icons.xml
@@ -3,6 +3,11 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <!-- Settings, should always be in the overflow -->
 
+    <item android:id="@+id/action_cart"
+        android:title="Cart"
+        android:icon="@drawable/ic_shopping_cart_black_24dp"
+        app:showAsAction="always"/>
+
     <item android:id="@+id/action_settings"
         android:title="Settings"
         app:showAsAction="collapseActionView"/>
