--- a/app/src/main/res/layout/fragment_shopping_cart.xml
+++ b/app/src/main/res/layout/fragment_shopping_cart.xml
@@ -47,7 +47,7 @@
         android:layout_marginLeft="16dp"
         app:layout_constraintTop_toBottomOf="@+id/cart_item_description" />
 
-    <ImageView
+    <ImageButton
         android:id="@+id/remove_from_cart"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
