--- a/app/src/main/res/layout/shopping_cart_item.xml
+++ b/app/src/main/res/layout/shopping_cart_item.xml
@@ -51,9 +51,11 @@
         android:id="@+id/remove_from_cart"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:srcCompat="@drawable/ic_delete_black_24dp"
+        android:layout_marginRight="4dp"
+        android:layout_marginTop="64dp"
+        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintRight_toRightOf="parent" />
+        app:srcCompat="@drawable/ic_delete_black_24dp" />
 
 
 </android.support.constraint.ConstraintLayout>
